--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.64.0",
     "playwright": "^1.39.0",
     "playwright-extra": "^4.3.6",
     "puppeteer": "^21.3.8",
